--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
     </style>
 
     <style name="Dialog.Theme" parent="Theme.AppCompat.Light.Dialog">
-	    <item name="colorAccent">#000000</item>
+	    <item name="colorAccent">#3d3d3d</item>
 	    <item name="android:textColorPrimary">#000000</item>
  	</style>
 
